# jumpserver

./: .dockerignore  .env.example  .gitattributes  .gitignore  .isort.cfg  .prettierrc  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-alpine-py3  Dockerfile-base  Dockerfile-base-env-alpine  Dockerfile-ce  Dockerfile-ee  Dockerfile-py3  Dockerfile-python  Dockerfile.base  Dockerfile.loong64  GITSHA  PR_DESCRIPTION.md  README-saml-lab.md  README.ja-JP.md  README.md  README.zh-CN.md  README_EN.md  SECURITY.md  Vagrantfile  build.sh  chgpass.sh  config-example.py  config_docker.py  config_docker.yml  config_example.py  config_example.yml  connect.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  (+42 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependabot.yml.bak  release-config.yml
.github/.github/: issue-spam-config.json
.github/ISSUE_TEMPLATE/: ----.md  1_bug_report.md  1_bug_report.yml  1_bug_report_cn.yml  2_feature_request.yml  2_feature_request_cn.yml  2_question.yml  3_question.yml  3_question_cn.yml  bug---.md  question.md
.github/workflows/: build-base-image.yml  build-python-image.yml  check-compilemessages.yml  cleanup-branches.yml  codeql-analysis.yml  discord-release.yml  docs-release.yml  issue-check-inactive.yml  issue-close-require.yml  issue-close.yml  issue-comment.yml  issue-inactive-alert.yml  issue-open.yml  issue-recent-alert.yml  issue-untimely-alert.yml  jms-build-test.yml  jms-generic-action-handler.yml  lgtm.yml  llm-code-review.yml  llm-code-review.yml.bak  pr-auto-labels.yml  release-drafter.yml  sync-gitee.yml  translate-readme.yml
apps/: .gitattributes  __init__.py  celerybeat.pid  feng.txt  feng1.txt  manage.py
apps/access_control/: api.py  api_urls.py  apps.py  forms.py  middleware.py  models.py  serializers.py  utils.py  view_urls.py  views.py
apps/accounts/: __init__.py  api.py  apps.py  backend.py  const.py  exceptions.py  filters.py  mixins.py  notifications.py  permissions.py  risk_handlers.py  serializers.py  signal_handlers.py  urls.py  utils.py  validator.py  validators.py  vault.hcl
apps/acl/: apps.py
apps/acls/: api.py  apps.py  const.py  filters.py  models.py  notifications.py  serializers.py  utils.py
apps/applications/: api.py  apps.py  const.py  filters.py  forms.py  hands.py  (+6 more)
data/: caution.txt
docs/: 1  AddUserAsset.py  Makefile  README.md  addcaptcha.md  admin_asset.rst  admin_audits.rst  admin_create_asset.rst  admin_guide.rst  admin_instruction.rst  admin_ops.rst  admin_permission.rst  admin_perms.rst  admin_session.rst  admin_settings.rst  admin_system_settings.rst  admin_terminal.rst  admin_user.rst  admin_work_center.rst  api_style.md  api_style_guide.md  api_style_guide.rst  asset_admin_user.rst  asset_authorized.rst  asset_label.rst  asset_list.rst  asset_system_user.rst  change_log.rst  code_style.md  conf.py  contact.rst  contributor.rst  dark-theme.md  developer_doc.txt  development.rst  distributed_01.rst  distributed_02.rst  distributed_03.rst  distributed_04.rst  distributed_05.rst  (+87 more)
etc/: supervisord.conf
iac/: README.md
install/: functions  initial_data.yaml  install.py  next.py  requirements.txt  zzjumpserver.sh
japi/: __init__.py  http.py  urls.py  views.py
jasset/: ansible_api.py  asset_api.py  forms.py  models.py  models_bak.py  urls.py  views.py
jlog/: log_api.py  models.py  urls.py  views.py
jperm/: README.md  ansible_api.py  models.py  perm_api.py  urls.py  utils.py  views.py  views.py.back
jpermission/: models.py  urls.py  views.py
jumpserver/: api.py  context_processors.py  forms.py  models.py  sendcloud_notice.py  settings.py  ssh.py  tasks.py  urls.py  views.py  wsgi.py
juser/: models.py  urls.py  user_api.py  views.py
keys/: README.md  test
logs/: README.md
playbook/: user_perm.yaml
readmes/: README.en.md  README.es.md  README.ja.md  README.ko.md  README.pt-br.md  README.ru.md  README.zh-hans.md  README.zh-hant.md
requirements/: alpine_requirements.txt  apk_pkg.sh  clean_site_packages.sh  collections.yml  deb_buster_requirements.txt  deb_pkg.sh  deb_requirements.txt  issue.md  issues.txt  lfs_requirements.sh  mac_pkg.sh  mac_requirements.sh  mac_requirements.txt  requirements.txt  requirements_debug.txt  requirements_xpack.txt  rpm_pkg.sh  rpm_requirements.txt  static_files.sh
scripts/: docker-publish.sh  jumpserver.sh  pip-requirement.txt  requirements.txt
ssh_server/: __init__.py  server.py
templates/: 404.html  500.html  base.html  base1.html  base2.html  css_js.html  download.html  error.html  exec_cmd.html  filter_ajax_api.html  foot_script.html  footer.html  head_script.html  index.html  index_cu.html  install.html  link_css.html  log_watch.html  login.html  nav.html  nav_bar_header.html  nav_cat_bar.html  nav_li_profile.html  paginator.html  paginator_new..html  script.html  setting.html  skin_config.html  success.html  test.html  test2.html  upload.html  user_add.html  useradd.html
terminal/: config_example.py  ssh_config.py  ssh_config_example.py  ssh_server.py  utils.py
tmp/: .gitkeep
ui/: README.md
utils/: 1.4.4_to_1.4.5_migrations.sh  2018_04_11_migrate_permissions.sh  2018_07_15_set_win_protocol_to_ssh.sh  activate_user.py  add_china_db_platform.py  add_pylint.sh  add_release_assets_field_when_not_exist.py  backup_db.sh  build.sh  build_docker.sh  check_celery.sh  clean_db_content_types.py  clean_duplicate_user_groups.py  clean_host_to_device.py  clean_migrations.sh  clean_site_packages.sh  clear_migration_history.sh  delete_oauth2_provider_application.sh  diff_internal.py  disable_ldap_auth.sh  disable_user.py  disable_user_mfa.py  disable_user_mfa.sh  django_migrations.sql  example_api.py  export_fake_data.sh  export_init_data.sh  generate_fake_data.py  get_no_parent_nodes.py  init_db.sh  load_fake_data.sh  make_fake_json.sh  make_migrations.sh  migrate_unorg_users_to_default_org.sh  redis.conf  renew_poetry_lock.sh  reupload_guacamole_replays.py  run_docker.sh  start_celery_beat.py  sync_node.py  (+3 more)
venv1/: pyvenv.cfg
websocket/: index.js  nohup.out  package.json
(+5072 files in other folders)
