[project]
name = "jumpserver"
version = "v4.0"
description = "Most popular open source bastion host"
authors = [{ name = "ibuler", email = "ibuler@qq.com" }]
requires-python = ">=3.11"
dependencies = [
    'aiofiles==24.1.0',
    'amqp==5.3.1',
    'ansible-core',
    'ansible==11.5.0',
    'ansible-runner',
    'asn1crypto==1.5.1',
    'bcrypt==4.3.0',
    'billiard==4.2.1',
    'chardet==5.2.0',
    'configparser==7.2.0',
    'decorator==5.2.1',
    'docutils==0.21.2',
    'ecdsa==0.19.1',
    'enum-compat==0.0.3',
    'ephem==4.2',
    'future==1.0.0',
    'itypes==1.2.0',
    'jinja2==3.1.6',
    'markupsafe==3.0.2',
    'olefile==0.46',
    'paramiko==3.5.1',
    'passlib==1.7.4',
    'pyasn1==0.6.1',
    'pycparser==2.22',
    'pycryptodome==3.22.0',
    'pycryptodomex==3.22.0',
    'phonenumbers==9.0.5',
    'gmssl==3.2.2',
    'itsdangerous==2.2.0',
    'pyotp==2.9.0',
    'pynacl==1.5.0',
    'python-dateutil==2.9.0',
    'pyyaml==6.0.1',
    'requests==2.32.3',
    'simplejson==3.20.1',
    'six==1.17.0',
    'sshtunnel==0.4.0',
    'sshpubkeys==3.3.1',
    'uritemplate==4.1.1',
    'vine==5.1.0',
    'werkzeug==3.1.3',
    'unicodecsv==0.14.1',
    'httpsig==1.3.0',
    'treelib==1.7.1',
    'psutil==7.0.0',
    'msrestazure==0.6.4',
    'adal==1.2.7',
    'openpyxl==3.1.5',
    'pyexcel==0.7.3',
    'pyexcel-xlsx==0.6.1',
    'data-tree==0.0.1',
    'pyvmomi==8.0.3.0.1',
    'termcolor==3.1.0',
    'html2text==2025.4.15',
    'pyzipper==0.3.6',
    'python3-saml==1.16.0',
    'websocket-client==1.8.0',
    'pyjwkest==1.4.2',
    'jsonfield2==4.0.0.post0',
    'geoip2==5.1.0',
    'ipip-ipdb==1.6.1',
    'pywinrm==0.5.0',
    'python-nmap==0.7.1',
    'django==5.2.1',
    'django-bootstrap3==25.1',
    'django-filter==25.1',
    'django-formtools==2.5.1',
    'django-ranged-response==0.2.0',
    'django-simple-captcha==0.6.2',
    'django-timezone-field==7.1',
    'djangorestframework==3.16.0',
    'djangorestframework-bulk==0.2.1',
    'django-simple-history==3.8.0',
    'django-private-storage==3.1.1',
    'drf-nested-routers==0.94.1',
    'drf-writable-nested==0.7.2',
    'rest-condition==1.0.3',
    'drf-yasg==1.21.10',
    'coreapi==2.3.3',
    'coreschema==0.0.4',
    'openapi-codec==1.3.2',
    'pillow==11.2.1',
    'pytz==2025.2',
    'django-proxy==1.3.0',
    'python-daemon==3.1.2',
    'eventlet==0.39.1',
    'greenlet==3.2.1',
    'gunicorn==23.0.0',
    'celery==5.5.2',
    'flower==2.0.1',
    'django-celery-beat==2.8.0',
    'kombu==5.5.3',
    'uvicorn==0.34.2',
    'websockets==15.0.1',
    'python-ldap==3.4.4',
    'ldap3==2.9.1',
    'django-radius',
    'django-cas-ng',
    'python-cas==1.6.0',
    'django-auth-ldap==5.2.0',
    'mysqlclient==2.2.7',
    'pymssql==2.3.4',
    'django-redis==5.4.0',
    'python-redis-lock==4.0.0',
    'pyopenssl==25.0.0',
    'redis',
    'pymongo==4.12.1',
    'pyfreerdp==0.0.4',
    'forgerypy3==0.3.1',
    'django-debug-toolbar==5.2.0',
    'pympler==1.1',
    'hvac==2.3.0',
    'pyhcl==0.4.5',
    'ipy==1.1',
    'netifaces>=00.11.0',
    'daphne==4.1.2',
    'channels>=04.0.0',
    'channels-redis==4.2.1',
    'fido2>=01.1.2',
    'ua-parser>=00.18.0',
    'user-agents>=02.2.0',
    'django-cors-headers>=04.3.0',
    'mistune==3.1.3',
    'openai>=01.29.0',
    'xlsxwriter>=03.1.9',
    'exchangelib>=05.1.0',
    'lxml==5.4.0',
    'pydantic>=02.7.4',
    'annotated-types>=00.6.0',
    'httpx>=00.27.0',
    'distro==1.9.0',
    'tqdm==4.67.1',
    'elasticsearch7==7.17.12',
    'elasticsearch8==8.18.1',
    'polib>=01.2.0',
    'azure-identity==1.22.0',
    'azure-keyvault-secrets==4.9.0',
    'psycopg2-binary==2.9.10',
    'pycountry>=024.6.1',
    'premailer==3.10.0',
    'azure-storage-blob==12.25.1',
    'esdk-obs-python==3.25.3',
    'oss2==2.19.1',
    'boto3==1.38.12',
    'botocore==1.38.12',
    's3transfer==0.12.0',
    'xmlsec==1.3.15',
]

[project.urls]
Homepage = "https://www.jumpserver.com"
Documentation = "https://www.jumpserver.com/docs"

[tool.uv]
resolution = "lowest-direct"
default-groups = ["xpack"]


[dependency-groups]

xpack = [
    'ipython==8.30.0',
    'qingcloud-sdk==1.2.15',
    'azure-mgmt-subscription==3.1.1',
    'azure-mgmt-compute==30.0.0',
    'azure-mgmt-network==23.1.0',
    'google-cloud-compute==1.15.0',
    'alibabacloud-dysmsapi20170525==2.0.24',
    'python-novaclient==18.3.0',
    'python-keystoneclient==5.1.0',
    'bce-python-sdk==0.8.87',
    'tencentcloud-sdk-python==3.0.941',
    'aliyun-python-sdk-core-v3==2.13.33',
    'aliyun-python-sdk-ecs==4.24.64',
    'keystoneauth1==5.2.1',
    'oracledb==1.4.0',
    'ucloud-sdk-python3==0.11.50',
    'huaweicloudsdkecs==3.1.52',
    'huaweicloudsdkcore==3.1.52',
    'volcengine-python-sdk==1.0.71',
    'aliyun-python-sdk-rds==2.7.49'
]

[tool.uv.sources]
ansible-core = { url = "https://github.com/jumpserver-dev/ansible/archive/refs/tags/v2.14.1.7.zip" }
ansible-runner = { url = "https://github.com/jumpserver-dev/ansible-runner/archive/refs/tags/2.4.0.1.zip" }
django-cas-ng = { url = "https://github.com/ibuler/django-cas-ng/releases/download/v4.3.2/django-cas-ng-4.3.2.zip" }
django-radius = { url = "https://github.com/ibuler/django-radius/archive/refs/tags/1.5.0.zip" }
redis = { url = "https://github.com/jumpserver-dev/redis-py/archive/refs/tags/v5.0.3.zip" }
